--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -52,6 +52,10 @@
 		width 75px
 		height 75px
 
+.c-script-popup
+	.card__text
+		padding 0
+
 .VueCarousel-wrapper
 	border-radius 200px
 	padding-top 20px
