add new type script

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -55,6 +55,12 @@
 .c-script-popup
 	.card__text
 		padding 0
+		overflow hidden
+		width 100%
+		height 100%
+	iframe
+		width 100%
+		height 100%
 
 .VueCarousel-wrapper
 	border-radius 200px
