--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -62,6 +62,14 @@
 		width 100%
 		height 100%
 
+.is
+	&-short-text
+		white-space nowrap
+		overflow hidden
+		text-overflow ellipsis
+	&-full-width
+		width 100%
+
 .VueCarousel-wrapper
 	border-radius 200px
 	padding-top 20px
