--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -62,6 +62,9 @@
 		width 100%
 		height 100%
 
+.c-intro-block
+	max-width 500px
+
 .is
 	&-short-text
 		white-space nowrap
@@ -70,6 +73,8 @@
 		cursor default
 	&-full-width
 		width 100%
+	&-color-white
+		color #FFF
 
 .VueCarousel-wrapper
 	border-radius 200px
