--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -75,6 +75,18 @@
 		width 100%
 	&-color-white
 		color #FFF
+	&-full-after
+		&:after
+			content ''
+			position absolute
+			top 0
+			left 0
+			width 100%
+			height 100%
+			cursor pointer
+		&:hover
+			.btn__content:before
+				background-color currentColor
 
 .VueCarousel-wrapper
 	border-radius 200px
